feat: working endpoint example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 BASE_PORT=8000
-BASE_URL="http://localhost:${BASE_PORT}"
+BASE_URL="http://127.0.0.1:${BASE_PORT}"
 
 DB_HOST='localhost'
 DB_NAME='test_db'
