--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 BASE_PORT=8000
 BASE_URL="http://127.0.0.1:${BASE_PORT}"
 
-DB_HOST='localhost'
-DB_NAME='test_db'
+DB_HOST='127.0.0.1'
+DB_NAME='construp_webhook_receiver'
 DB_USER='root'
 DB_PASSWORD='root'
 DB_PORT='3306'
